# syncnet_python

./: pyproject.toml
syncnet_python/: run_pipeline.py
